Fix menu animation during dark mode transistion

--- a/css/styles.css
+++ b/css/styles.css
@@ -1583,6 +1583,9 @@ body.dark #menu button{
 body.dark #menu::before{
     background-color: #2c2c2c;
 }
+body.toggle #menu::before{
+    transition: 0.7s cubic-bezier(0.33, 1, 0.68, 1);
+}
 body.dark #pride-modes > div:first-of-type div{
     background-color: #2c2c2c;
 }
